Registrar.php se agrego una validacion, donde pregunta al response de facebook si el usuario tiene correo registrado, sino tiene se le indica al usuario registrarse por el frm de registro

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # Created by https://www.gitignore.io/api/osx,node,windows,polymer,sublimetext
 
+# Clase de la base de datos :
+classes/DatabasePDOInstance.function.php
+
 ### Node ###
 # Logs
 logs
